# hepqpr-qallse

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  pyproject.toml
examples/: build_qubo.py  sample_qubo_neal.py  sample_qubo_qbsolv.py
notebooks/: 00-truth.html  00-truth.ipynb  18-11-15_tune-hpt-model_0-base.html  18-11-15_tune-hpt-model_1-cuts.html  18-11-15_tune-hpt-model_2-cuts-conflict1.html  18-11-15_tune-hpt-model_3-dj.html  run-on-dwave.ipynb  run-on-simulation.ipynb  simple-run-example.ipynb
other/: parse_qbsolv.py
qallse/: data_structures.py  dumper.py  qallse_base.py  track_recreater.py
qallse/cli/: __main__.py  entrypoints.py  func.py  utils.py
qallse/dsmaker/: __init__.py  dsmaker.py
qallse/other/: filter_input_doublets.py
qallse/seeding/: __main__.py  doublet_making.py  main.py  utils.py
scripts/: 1-recreate_datasets.py  2-build_qubos.py  3-solve_qubos.py  build_qubos.py  ds_run.py  run_benchmark.py  run_dwave.py  test_qbsolv_random_seed.py  test_qubos.py
src/: setup.py
src/hepqpr/qallse/: __init__.py  __main__.py  commandline.py  data_structures.py  data_wrapper.py  disjoint_sets.py  dumper.py  plotting.py  qallse.py  qallse_all.py  qallse_base.py  qallse_cs.py  qallse_d0.py  qallse_dj.py  qallse_mp.py  qallse_vw.py  track_recreater.py  type_alias.py  utils.py
src/hepqpr/qallse/cli/: __main__.py  entrypoints.py  func.py  utils.py
src/hepqpr/qallse/dsmaker/: dsmaker.py  dsmaker_simple.py
src/hepqpr/qallse/other/: dw_recorder.py  dw_timing_recorder.py  parse_qbsolv.py  stdout_redirect.py
src/hepqpr/qallse/seeding/: __init__.py  (+5 more)
